Fixed twitter Widget Scrolling, changed Z-Index order

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -39,10 +39,15 @@
   top:0;
   left:0;
   right:0;
-  z-index:-100;
+
+  
 }
+
 #particles-js{
-  z-index:-100;
+
+  position:fixed;
+  top:0;
+  /*z-index:-100;*/
   height:100vh!important;
   opacity:.3;
 }
@@ -55,7 +60,7 @@ video{
     min-height: 100vh;
     width: auto;
     height: auto;
-    z-index: -100;
+    z-index: -101;
     -ms-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
