--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -5,7 +5,7 @@
     right: 0;
     margin-top: 30vh;
     margin-left:30px;
-    max-width:150px;
+    max-width:100px;
 }
 
 
